--- a/Web-Univille/Doc_base.html
+++ b/Web-Univille/Doc_base.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
+        <style>
+            h1{
+                background-color: black;
+                color: white;
+                text-align: center;
+                padding: 10px;
+            }
+        </style>
         <title>Documento HTML mínimo</title>
         <meta charset="utf-8"></meta>
     </head>
@@ -31,7 +39,7 @@
             <li><a href="">News</a></li>
             <li><a href="">Contact</a></li>
             <li><a href="">About</a></li>
-        </ul>
+        </ul><hr>
         <h3>Lista Ordenada</h3>
         <ol>
             <li>MM</li>
@@ -39,14 +47,40 @@
             <li>FI</li>
             <li>SD</li>
             <li>PP</li>
-        </ol>
+        </ol><hr>
         <h4>Lista ordenada a partir de 10</h4>
         <ol start="10">
             <li>Vertigo</li>
             <li>Train</li>
             <li>Mirage</li>
             <li>Overpass</li>
-        </ol>
-        
+        </ol><hr>
+        <h3>Lista Alinhada</h3>
+        <ul>
+            <li>Carro
+                <ol>
+                    <li>Onix</li>
+                    <li>Sonic</li>
+                    <li>C3</li>
+                </ol>
+            </li>
+            <li>Marcas
+                <ol>
+                    <li>Fiat</li>
+                    <li>Ford</li>
+                    <li>Tesla</li>
+                </ol>
+            </li>
+        </ul>
+        <hr>
+
+        <dl>
+            <dt>Café</dt>
+            <dd>Café expresso</dd>
+            <dd>Café com leite</dd>
+            <dt>Tipo de Torra</dt>
+            <dd>Media escura</dd>
+            <dd>Media clara</dd>
+        </dl>
    </body>
 </html>
