--- a/Web-Univille/Doc_base.html
+++ b/Web-Univille/Doc_base.html
@@ -8,11 +8,19 @@
                 text-align: center;
                 padding: 10px;
             }
+            aula{
+                background-color: rgb(204, 197, 197);
+                color: rgb(14, 14, 202);
+                text-align: center;
+                padding: 12px;
+            }
         </style>
         <title>Documento HTML mínimo</title>
         <meta charset="utf-8"></meta>
     </head>
     <body>
+        <aula>Aula 2</aula>
+        <h2>Conteudo basico</h2>
         <h1>
             Iniciando
         </h1>
@@ -29,10 +37,12 @@
         <hr>
         <p>Paragrafo <br> De inicio</p>
 
-        <!-- isso é um comentário em HTML-->
+        <!-- isso é um comentário em HTML-->
 
         <hr>
         <hr>
+        <aula>Aula 3</aula>
+        <h2>Aula de Lista</h2>
         <h3>Lista não ordenada</h3>
         <ul>
             <li><a href="">Home</a></li>
@@ -48,7 +58,7 @@
             <li>SD</li>
             <li>PP</li>
         </ol><hr>
-        <h4>Lista ordenada a partir de 10</h4>
+        <h3>Lista ordenada a partir de 10</h3>
         <ol start="10">
             <li>Vertigo</li>
             <li>Train</li>
@@ -82,5 +92,30 @@
             <dd>Media escura</dd>
             <dd>Media clara</dd>
         </dl>
-   </body>
+
+        <aula>Aula 4</aula>
+        <h2>Conteúdos Fraseados</h2>
+        <ol>
+            <li>Italico</li>
+            <p>Texto em <i>italico</i>   <br>Usando < i></p>
+            <p>Texto em <em>italico</em> <br> Usando < em> para enfase</p>
+            <li>Negrito</li>
+            <p>Texto em <b>Negrito</b>          <br>Usando  < b></b></p>
+            <p>Texto em <strong>negrito</strong><br> usando < strong></strong></p>
+            <li>Destacado</li>
+            <P>Texto em <mark>destaque</mark><br> Usando < mark></P>
+            <li>Riscado</li>
+            <p>Texto com <s>risco</s><br> Usando < s> </p>
+            <li>Texto Subescrito</li>
+            <p>Texto <sub>Subescrito</sub><br>Usando < sub></p>
+            <li>Texto Sobrescrito</li>
+            <p>Texto <sup>Sobrescrito</sup><br>Usando < sup></p>
+            <li>Texto Small</li>
+            <p>Texto <small>roda pé</small><br>Usando < small></p>
+            <li>Textp Code</li>
+            <p><code>Texto usando < code> mudando a fonte e espaçamento</code></p>
+            <li>Espaçamento entre as palavras</li>
+            <p>Escrevendo &nbsp; com um espaço grande<br>E depois &nbsp; &nbsp; dois espaços<br><br> Usando & NBSP e < br></p>
+        </ol><hr>
+  </body>
 </html>
