--- a/Web-Univille/Exercicio.html
+++ b/Web-Univille/Exercicio.html
@@ -14,12 +14,19 @@
                 text-align: center;
                 padding: 12px;
             }
+            Divisao{
+                background-color: darkgreen;
+                color: red;
+                text-align: center;
+                padding: 15px;
+            }
         </style>
         <title>Lista de Exercicios</title>
         <meta charset="utf-8"></meta>
     </head>
     <body>
-        <h1>Lista de Exercicios</h1><hr><br>
+        <!--<divisao></divisao>-->
+        <h1>Exercicio Lista 1</h1><hr><br>
         <h2>1 - Lista de Compras</h2>
         <ul>
             <li>Tomate</li>
@@ -76,5 +83,26 @@
             <dd>Bebida 1</dd>
             <dd>Bebida 2</dd>
         </dl>
+        <br><br><br>
+        <!--<divisao></divisao>-->
+        <h1>Exercicio Lista 2</h1><hr><br>
+        <h2>1 - Lista de Tarefas</h2>
+        <h3>Os itens mais importantes destacados e os já finalizados riscados</h3>
+        <ol>
+            <li><mark>Item Importante</mark></li>
+            <li><mark>Outro item importante</mark></li>
+            <li><s>Item feito</s></li>
+            <li><s>Outro item feito</s></li>
+        </ol>
+        <h2>2 - Diversos Parágrafos</h2>
+        <h3>Fazer alguns parágrafos com números indicando roda pé e depois separar por barra e mostrar o roda pé</h3>
+        <p>Um texto super importante<sup>1</sup> que algo vai dar errado<br>
+            Depois disso temos algo<sup>2</sup> para ser dito<br>
+            Indicando que tem mais coisa para acontecer<sup>3</sup><br>
+        </p><hr>
+        <p><i>importante<sup>1</sup></i>: Uma palavra usada</p>
+        <p><i>algo<sup>2</sup></i>: Palavra no português</p>
+        <p><i>acontecer<sup>3</sup></i>: Verbo no infinitivo</p>
+
     </body>
 </html>
