--- a/Web-Univille/Doc_base.html
+++ b/Web-Univille/Doc_base.html
@@ -19,7 +19,10 @@
         <meta charset="utf-8"></meta>
     </head>
     <body>
-        <aula>Aula 2</aula>
+        <button onclick="document.location='exercicio.html'">Pagina Exercicio</button><br><br><br>
+        <aula id="top">Aula 2</aula>
+
+
         <h2>Conteudo basico</h2>
         <h1>
             Iniciando
@@ -117,5 +120,27 @@
             <li>Espaçamento entre as palavras</li>
             <p>Escrevendo &nbsp; com um espaço grande<br>E depois &nbsp; &nbsp; dois espaços<br><br> Usando & NBSP e < br></p>
         </ol><hr>
+
+        <aula>Aula 5</aula>
+        <h2>Imagens</h2>
+        <hr><br><br>
+        <img src="bitcoin.jpg" width="180" height="180" alt="Imagem na mesma Pasta" title="Cripto moedinha">
+        <img src="..\base\bike.png" width="180" height="180" alt="Imagem na Pasta Fora" title="bike">
+        <figure>
+            <img src="Imagens/jaguar.jpg" width="180" height="180" alt="Imagem na Pasta Dentro" title="Onca onca">
+            <figcaption>Onca Onca</figcaption>
+        </figure>
+        <br> <br>
+
+        <img src="https://cdn.pixabay.com/photo/2022/07/17/12/12/pembroke-welsh-corgi-7327285_960_720.jpg" alt="Imagem" width="180" height="180">
+        <img src="https://media0.giphy.com/media/Tgsj8DGwcltXjZb4kQ/giphy.gif?cid=ecf05e47b863431caff6e25f0dc1e1fb0750883d370b90f2&rid=giphy.gif&ct=g" alt="gif" width="180" height="180">
+        
+        <h2>Links</h2>
+
+        <a href="https://www.google.com" target="_blank">Google</a><br>
+        <a href="https://twitch.tv/radsrei" target="_blank">Twitch - Radsrei</a>
+        <br><br><br>
+        <a href="#top">Topo</a>
+        <br><br><br><button onclick="document.location='exercicio.html'">Pagina Exercicio</button>
   </body>
 </html>
