--- a/Web-Univille/Doc_base.html
+++ b/Web-Univille/Doc_base.html
@@ -124,10 +124,10 @@
         <aula>Aula 5</aula>
         <h2>Imagens</h2>
         <hr><br><br>
-        <img src="bitcoin.jpg" width="180" height="180" alt="Imagem na mesma Pasta" title="Cripto moedinha">
-        <img src="..\base\bike.png" width="180" height="180" alt="Imagem na Pasta Fora" title="bike">
+        <img src="bitcoin.png" width="180" height="180" alt="Imagem na mesma Pasta" title="Cripto moedinha">
+        <img src="../bike.png" width="180" height="180" alt="Imagem na Pasta Fora" title="bike">
         <figure>
-            <img src="Imagens/jaguar.jpg" width="180" height="180" alt="Imagem na Pasta Dentro" title="Onca onca">
+            <img src="imagem/onca.jpg" width="180" height="180" alt="Imagem na Pasta Dentro" title="Onca onca">
             <figcaption>Onca Onca</figcaption>
         </figure>
         <br> <br>
@@ -137,8 +137,9 @@
         
         <h2>Links</h2>
 
-        <a href="https://www.google.com" target="_blank">Google</a><br>
-        <a href="https://twitch.tv/radsrei" target="_blank">Twitch - Radsrei</a>
+        <a href="https://twitch.tv/atleticacct" target="_blank">Twitch - Atletica CCT</a><br>
+        <a href="https://twitch.tv/radsrei" target="_blank">Twitch - Radsrei</a><br>
+        <a href="bitcoin.png" download="caindo.png" target="_blank">download</a>
         <br><br><br>
         <a href="#top">Topo</a>
         <br><br><br><button onclick="document.location='exercicio.html'">Pagina Exercicio</button>
