--- a/Web-Univille/Exercicio.html
+++ b/Web-Univille/Exercicio.html
@@ -20,6 +20,14 @@
                 text-align: center;
                 padding: 15px;
             }
+            table{
+                background-color: cornflowerblue;
+                /* border: solid black; */
+                border-collapse: collapse;
+            }
+            th,td{
+                border: 3px solid red;
+            }
         </style>
         <title>Lista de Exercicios</title>
         <meta charset="utf-8"></meta>
@@ -126,6 +134,48 @@
         
 
         <br><br><br>
+
+        <h1>Lista de Exercicios 9</h1>
+        <h2>1 - Estados do Brasil e Capitais</h2>
+        <table>
+            <tr>
+                <th>Estado</th>
+                <th>Capital</th>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td>Rio de Janeiro</td>
+            </tr>
+            <tr><td>São Paulo</td><td>São Paulo</td></tr>
+            <tr>
+                <th colspan="2"><strong>...</strong></th>
+            </tr>
+        </table>
+
+        <h2>2 - Grupo Coda do mundo</h2>
+        <table>
+            <tr>
+                <th colspan="2">Grupo Random</th>
+            </tr>
+            <tr>
+                <th>Pais</th>
+                <th>Bandeira</th>
+            </tr>
+            <tr>
+                <td>Brasil</td>
+                <td><img src="https://static.todamateria.com.br/upload/ba/nd/bandeira-do-brasil-og.jpg" alt="Brasil" width="240" height="120"></td>
+            </tr>
+            <tr>
+                <td>Finlandia</td>
+                <td><img src="https://s4.static.brasilescola.uol.com.br/be/2021/10/bandeira-da-finlandia.jpg" alt="Find" width="240" height="120"></td>
+            </tr>
+            <tr>
+                <td>Japao</td>
+                <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9e/Flag_of_Japan.svg/290px-Flag_of_Japan.svg.png" alt="Japa" width="240" height="120"></td>
+            </tr>
+        </table>
+        <h2></h2>
+        <br><br>
         <a href="#top">Topo</a>
         <br><br><br><button onclick="document.location='base.html'">Pagina Base</button>
     </body>
