--- a/Web-Univille/Doc_base.html
+++ b/Web-Univille/Doc_base.html
@@ -14,6 +14,14 @@
                 text-align: center;
                 padding: 12px;
             }
+            table{
+                background-color: cornflowerblue;
+                /* border: solid black; */
+                border-collapse: collapse;
+            }
+            th,td{
+                border: 3px solid red;
+            }
         </style>
         <title>Documento HTML mínimo</title>
         <meta charset="utf-8"></meta>
@@ -141,7 +149,43 @@
         <a href="https://twitch.tv/radsrei" target="_blank">Twitch - Radsrei</a><br>
         <a href="bitcoin.png" download="caindo.png" target="_blank">download</a>
         <br><br><br>
+        
+<br><br>
+        <aula>Aula 9</aula>
+        
+        <h2>Tabelas</h2>
+        <table>
+            <caption>Paises</caption>
+            <thead>
+            <tr style="background-color: green;">
+                <th>Pais</th>
+                <th>Clima</th>
+                <th colspan="2">Especialidade</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Brasil</td>
+                <td>Quente</td>
+                <td>Musica</td>
+                <td>Festa</td>
+            </tr>
+            <tr>
+                <td>Chile</td>
+                <td>Frio</td>
+                <td>vinho</td>
+                <td>Cordileiras</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td><strong>Br</strong></td>
+                <td><strong>CH</strong></td>  
+            </tr>
+        </tfoot>    
+        </table><br><br><br>
         <a href="#top">Topo</a>
-        <br><br><br><button onclick="document.location='exercicio.html'">Pagina Exercicio</button>
+        <br><br><br><button onclick="document.location='exercicio.html'">Pagina Exercicio</button><br>
+
   </body>
 </html>
