--- a/Web-Univille/Calendário/dezembro.html
+++ b/Web-Univille/Calendário/dezembro.html
@@ -97,12 +97,15 @@
                 <td>31</td> 
             </tr>
         </tbody></table><br><br><br>
-        <p> <br><strong>2</strong> – Feriado nacional: Finados
-            <br><strong>9</strong> – Reunião do Comitê de Ética em Pesquisa
-            <br><strong>14</strong> – Recesso acadêmico
-            <br><strong>15</strong> – Feriado nacional: Proclamação da República
-            <br><strong>24</strong> – Data limite para envio de projetos de pesquisa para análise do Comitê de Ética em Pesquisa
-
+        <p><br> <strong>4</strong> – Término do semestre
+           <br> <strong>5 a 10</strong> – Reposição/recuperação de aulas
+           <br> <strong>10</strong> – Último dia para publicação de notas do bimestre
+           <br> <strong>12 a 17</strong> – Exames finais
+           <br> <strong>14</strong> – Reunião do Comitê de Ética em Pesquisa
+           <br> <strong>15</strong> – Data limite para envio de projetos de pesquisa para análise do Comitê de Ética em Pesquisa
+           <br> <strong>21</strong> – Último dia para publicação de notas de exames finais e trabalhos de conclusão de curso (TCC/TCE/monografia/trabalho de graduação)
+           <br> <strong>22</strong> – Encerramento das atividades
+           <br> <strong>25</strong> – Natal
         </p>
     
     </body>
